Bug 245890 - Return from PiP to Element Fullscreen Animation breaks sometimes
Summary: Return from PiP to Element Fullscreen Animation breaks sometimes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-09-30 11:55 PDT by Jer Noble
Modified: 2022-09-30 13:10 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2022-09-30 11:55:44 PDT
Return from PiP to Element Fullscreen Animation breaks sometimes
Comment 1 Jer Noble 2022-09-30 11:55:55 PDT
<rdar://problem/98839882>
Comment 2 Jer Noble 2022-09-30 12:04:32 PDT
Pull request: https://github.com/WebKit/WebKit/pull/4873
Comment 3 EWS 2022-09-30 13:10:19 PDT
Committed 255041@main (f235928df8cf): <https://commits.webkit.org/255041@main>

Reviewed commits have been landed. Closing PR #4873 and removing active labels.