Return from PiP to Element Fullscreen Animation breaks sometimes https://bugs.webkit.org/show_bug.cgi?id=245890 <rdar://98839882>

Reviewed by Eric Carlson.

When entering picture-in-picture from "element" fullscreen (as opposed to "video" i.e. "AVKit" fullscreen) tapping the "return" button in the PiP window will re-enter fullscreen. But because this operation may take a while (re-layout of a heavy page like youtube.com can take upwards of 500ms), WebKit performs a four-part transition: 1, enter AVKit fullscreen mode with blank content; 2, exit PiP into the AVKit fullscreen presentation; 3, enter "element" fullscreen mode behind AVKit's fullscreen presentation; 4, exit AKit fullscreen _into_ the "element" fullscreen presentation.

When this bug occurs, it appears that in step 3, the "element" fullscreen presentation happens _on top_ of the AVKit fullscreen presentation rather than below.

To mitigate this animation issue, disable the "element" fullscreen presentation animation when transitining to fullcreen from PiP mode.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController beganEnterFullScreenWithInitialFrame:finalFrame:]):

Canonical link: https://commits.webkit.org/255041@main